--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,30 @@
+awsebcli==3.17.0
+botocore==1.13.50
+cement==2.8.2
+certifi==2019.11.28
+chardet==3.0.4
+colorama==0.3.9
+docutils==0.15.2
+future==0.16.0
+idna==2.7
+jmespath==0.9.4
+pathspec==0.5.9
+pypiwin32==223
+python-dateutil==2.8.0
+pywin32==227
+PyYAML==3.13
+requests==2.20.1
+semantic-version==2.5.0
+six==1.11.0
+termcolor==1.1.0
+urllib3==1.24.3
+wcwidth==0.1.8
 Django==2.1.1
+django-sendgrid-v5==0.8.1
+future==0.18.2
 mysqlclient==1.4.6
+Pillow==7.0.0
+python-http-client==3.2.4
 pytz==2019.3
+sendgrid==6.1.1
+Unidecode==1.1.1
