--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
+amqp==2.5.2
+billiard==3.6.2.0
+celery==4.4.0
+cffi==1.13.2
 Django==2.1.1
 django-sendgrid-v5==0.8.1
 future==0.18.2
+gevent==1.4.0
+greenlet==0.4.15
+importlib-metadata==1.5.0
+kombu==4.6.7
 mysqlclient==1.4.6
 Pillow==7.0.0
+pycparser==2.19
 python-http-client==3.2.4
 pytz==2019.3
+redis==3.4.1
 sendgrid==6.1.1
 Unidecode==1.1.1
+vine==1.3.0
+zipp==2.1.0
