config aws celery redis

--- a/.ebextensions/elasticache.config
+++ b/.ebextensions/elasticache.config
@@ -1,5 +1,7 @@
+#This sample requires you to create a separate configuration file that defines the custom option settings for CacheCluster properties.
+          
 Resources:
-  shop-redis-cluster:
+  MyElastiCache:
     Type: AWS::ElastiCache::CacheCluster
     Properties:
       CacheNodeType: 
@@ -15,15 +17,15 @@ Resources:
              OptionName : Engine
              DefaultValue: Redis
       CacheSecurityGroupNames:
-        - Ref: default
-  default:
+        - Ref: MyCacheSecurityGroup
+  MyCacheSecurityGroup:
     Type: AWS::ElastiCache::SecurityGroup
     Properties:
       Description: "Lock cache down to webserver access only"
-  defaultIngress:
+  MyCacheSecurityGroupIngress:
     Type: AWS::ElastiCache::SecurityGroupIngress
     Properties:
       CacheSecurityGroupName: 
-        Ref: default
+        Ref: MyCacheSecurityGroup
       EC2SecurityGroupName:
-        Ref: awseb-e-sckpaa6ebz-stack-AWSEBSecurityGroup-PILFP7XDWBK9
+        Ref: AWSEBSecurityGroup
