--- a/.ebextensions/celery-worker.config
+++ b/.ebextensions/celery-worker.config
@@ -1,6 +1,6 @@
 container_commands:
   01_activate_celery_worker:
-    command: "celery -A shop worker -l info -P gevent"
+    command: "celery -A shop worker -l info"
     leader_only: true
 option_settings:
   aws:elasticbeanstalk:application:environment:
